--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@emailjs/browser": "^3.11.0",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
+    "keen-slider": "^6.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
     "react-parallax-tilt": "^1.7.149",
     "react-scroll-parallax": "^3.4.2",
-    "react-simple-typewriter": "^5.0.1",
-    "swiper": "^9.4.1"
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
