--- a/public/projects.json
+++ b/public/projects.json
@@ -33,7 +33,7 @@
       "https://i.ibb.co/0XWNcxW/slider-2.png"
     ],
     "category": "mern",
-    "fullPage": "./../src/assets/projects/screenshots/rhymove.png"
+    "fullPage": "https://i.ibb.co/0VwH6nP/rhymove.png"
   },
   {
     "id": 8273842,
@@ -65,7 +65,7 @@
       "https://i.ibb.co/C557fxk/botboy-1.png"
     ],
     "category": "mern",
-    "fullPage": "./../src/assets/projects/screenshots/botboy.png"
+    "fullPage": "https://i.ibb.co/f9KX1CV/botboy.png"
   },
   {
     "id": 4534536,
@@ -98,6 +98,6 @@
       "https://i.ibb.co/rMg0P8p/botboy-6.png"
     ],
     "category": "mern",
-    "fullPage": "./../src/assets/projects/screenshots/bistro-boss.png"
+    "fullPage": "https://i.ibb.co/mSxCLQb/bistro.png"
   }
 ]
